Resolve warnings